@@ -16,15 +16,9 @@ public class TouristRepository {
     }
 
     public void populateTouristAttraction() {
-        ArrayList<Tag> tag1 = new ArrayList<>();
-        tag1.add(Tag.NATUR);
-        tag1.add(Tag.BØRNEVENLIG);
-        tag1.add(Tag.GRATIS);
-
-
-        attractions.add(new TouristAttraction("Tivoli", "Verdens ældste tivoli", "København", List.of(Tag.BØRNEVENLIG, Tag.DYRT)));
-        attractions.add(new TouristAttraction("Den Lille Havfrue", "Verdens ældste havfrue", "København", List.of(Tag.BØRNEVENLIG, Tag.DYRT)));
-        attractions.add(new TouristAttraction("Operaen", "Verdens ældste opera", "København", List.of(Tag.BØRNEVENLIG, Tag.DYRT)));
+        attractions.add(new TouristAttraction("Tivoli", "Verdens ældste tivoli", "København", new ArrayList<>(Arrays.asList(Tag.BØRNEVENLIG, Tag.DYRT, Tag.FORLYSTELSEPARK))));
+        attractions.add(new TouristAttraction("Den Lille Havfrue", "Verdens ældste havfrue", "København", new ArrayList<>(Arrays.asList(Tag.BØRNEVENLIG, Tag.GRATIS, Tag.KUNST))));
+        attractions.add(new TouristAttraction("Operaen", "Verdens ældste opera", "København", new ArrayList<>(Arrays.asList(Tag.DYRT, Tag.KUNST, Tag.KONCERT))));
 
     }
 
@@ -36,10 +30,12 @@ public class TouristRepository {
         attractions.add(touristAttraction);
     }
 
-    public void updateTouristAttraction(String name, String updateDescription) {
+    public void updateTouristAttraction(String name, String updateDescription, String city, List<Tag> tags) {
         for (TouristAttraction t : getTouristAttractions()) {
             if (name.equals(t.getName())) {
                 t.setDescription(updateDescription);
+                t.setCity(city);
+                t.setTags(tags);
             }
         }
     }
@@ -62,6 +58,24 @@ public class TouristRepository {
 
         }
         return null;
+    }
+
+    public List<Tag> getAllTags() {
+        return List.of(Tag.values());
+    }
+
+    public List<String> getAllCities() {
+        List<String> cities = new ArrayList<>(
+                List.of(
+                        "København",
+                        "Odense",
+                        "Aarhus",
+                        "Aalborg",
+                        "Kalundborg"
+                )
+        );
+
+        return cities;
     }
 
 
